# whole_plasmid_check

./: pyproject.toml
examples/: plasmid_check_demo.ipynb
plasmid_check/: __init__.py  plasmid_check.py
