[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasmid_check"
version = "0.0.1"
description = "Utilities for checking whole plasmid sequencing results"
readme = "README.md"
authors = [
  { name="Chang-Hwa Chiang", email="cdchiang@umich.edu" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
   'biopython',
   'pandas',
   'openpyxl',
   'tqdm',
   'biotite',
]

